fixed query http://localhost:8080/places?city=Rome&category=Restaurant&minRating=4.5